--- a/app/src/main/res/layout/fragment_aggregates.xml
+++ b/app/src/main/res/layout/fragment_aggregates.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SurgeListFragment">
+    tools:context=".AggregateListFragment">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -11,18 +11,18 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/linearLayout"
-        android:background="@color/color_background"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@color/color_background">
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/duration"
-            android:id="@+id/duration"
+            android:text="# of Surges"
+            android:id="@+id/surge_count"
             android:layout_weight="1"
             android:gravity="center" />
 
@@ -30,8 +30,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/frequency"
-            android:id="@+id/frequency"
+            android:text="Average Duration"
+            android:id="@+id/average_duration"
             android:layout_weight="1"
             android:gravity="center" />
 
@@ -39,8 +39,17 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:id="@+id/start_date"
+            android:text="Average Frequency"
+            android:id="@+id/average_frequency"
+            android:layout_weight="1"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Since"
+            android:id="@+id/since"
             android:layout_weight="1"
             android:gravity="center" />
 
@@ -48,7 +57,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/surge_list"
+        android:id="@+id/aggregate_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/start_button"
@@ -57,10 +66,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin" />
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin" />
 
-    <Button
+    <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start"
@@ -69,10 +78,6 @@
         android:layout_alignRight="@+id/surge_list"
         android:layout_alignEnd="@+id/surge_list"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin" />
+        android:layout_alignParentStart="true" />-->
 
 </RelativeLayout>
