--- a/app/src/main/res/layout/fragment_surge_graph.xml
+++ b/app/src/main/res/layout/fragment_surge_graph.xml
@@ -2,6 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bklimt.babywatch.SurgeGraphFragment">
+    tools:context="com.bklimt.surgetracker.view.SurgeGraphFragment">
 
 </FrameLayout>
