--- a/android/app/src/main/res/menu/main.xml
+++ b/android/app/src/main/res/menu/main.xml
@@ -4,6 +4,7 @@
     <item android:id="@+id/action_email"
         android:title="@string/action_email"
         android:orderInCategory="100"
+        android:icon="@drawable/content_email"
         android:showAsAction="always" />
     <!--<item android:id="@+id/action_sync"
         android:title="@string/action_sync"
